2009-11-13  Adam Barth  <abarth@webkit.org>

        Unreviewed partial build fix for Chromium.

        * bindings/v8/ScriptController.h:
        (WebCore::ScriptController::getAllWorlds):

2009-11-13  Eric Seidel  <eric@webkit.org>

        No review, build fix only.

        Fix Windows and Chromium builds after http://trac.webkit.org/changeset/50977.

        Unify TextBoundaries implementations by only relying on WTF Unicode abstractions
        https://bugs.webkit.org/show_bug.cgi?id=31468

        * WebCore.gypi: Rename TextBoundariesICU -> TextBoundaries
        * WebCore.vcproj/WebCore.vcproj: Rename TextBoundariesICU -> TextBoundaries

2009-11-12  Jeremy Orlow  <jorlow@chromium.org>

        Reviewed by Dmitry Titov.

        LocalStorage quota should include key sizes in its count
        https://bugs.webkit.org/show_bug.cgi?id=31451

        * storage/StorageMap.cpp:
        (WebCore::StorageMap::setItem):
            Count keys in the quota when adding a new item.
        (WebCore::StorageMap::removeItem):
            Remove the key's length from the quota if we're removing the item.
        (WebCore::StorageMap::importItem):
            Assume that we're adding things for the first time.
            Count keys in the quota.

2009-11-13  Dominik Röttsches  <dominik.roettsches@access-company.com>

        Reviewed by Eric Seidel.

        Unify TextBoundaries implementations by only relying on WTF Unicode abstractions
        https://bugs.webkit.org/show_bug.cgi?id=31468

        Moving TextBoundariesICU.cpp to TextBoundaries.cpp
        by removing the direct ICU dependency and replacing it
        with WTF functions and WebCore's own TextBreakIterator
        abstractions.

        * GNUmakefile.am:
        * platform/graphics/gtk/SimpleFontDataGtk.cpp:
        * platform/text/TextBoundaries.cpp: Added.
        (WebCore::findNextWordFromIndex):
        (WebCore::findWordBoundary):
        * platform/text/TextBoundariesICU.cpp: Removed.